// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when Header then snapshot created when blurred 1`] = `
<header
  className="blurred"
  id="header"
/>
`;

exports[`when Header then snapshot created when not blurred 1`] = `
<header
  className=""
  id="header"
/>
`;
